<resources>
    <string name="wait_dialog_title">Please wait for a while…</string>
    <string name="request_method_not_allow">The request method was not server allows.</string>
    <string name="no_this_user">当前聊天的好友或圈子尚未加载</string>
    <string name="HXconnectionerror">无法连接到聊天服务器，请检测网络连接是否正常</string>
    <string name="forceLogout">下线通知</string>
    <string name="forceLogoutContent">您的帐号在其他设备登录，本机已下线。如非本人操作，请及时修改您的登录密码。</string>
    <string name="barcodeerror">条码格式不符合商品条码规范</string>
    <string name="invalidUrl">该商品没有链接信息</string>
    <string name="responseSuccess">反馈成功</string>
    <string name="responseDetail">您的反馈已收到，我们会尽快处理，感谢您的关注。</string>
    <string name="app_name">模拟POS系统</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="strPoint">小圆点</string>
    <string name="agreement">请认真阅读协议并同意使用</string>
    <string name="mflistview_footer_normal_text">加载更多</string>
    <string name="mflistview_footer_ready_text">释放加载</string>
    <string name="mflistview_header_refreshing_text">正在更新……</string>
    <string name="mflistview_header_ready_text">松开即可更新</string>
    <string name="mflistview_header_normal_text">下拉即可更新</string>
    <string name="softwareUseProtocol">《爱查软件使用协议》</string>
    <string name="register_text">点击上面的 "注册" 按钮，即表示你同意《爱查软件使用协议》</string>
    <string name="loginNow">已有账号，直接登录</string>
    <string name="removeItem">Remove</string>
    <string name="follow">关注</string>
    <string name="unFollow">取消关注</string>
    <string name="hadFollow">已关注</string>
    <string name="hadUnFollow">已取消关注</string>
    <string name="delChatHistory">删除聊天记录</string>
    <string name="ieCheckService">爱查客服</string>
    <string name="stickyOnTop">置顶聊天</string>
    <string name="removeFromTop">取消置顶</string>
    <string name="hadStickyOnTop">已置顶</string>
    <string name="hadRemoveFromTop">已取消置顶</string>
    <string name="markAsRead">标为已读</string>
    <string name="markAsUnread">标为未读</string>
    <string name="newMessageAlerts">接收新消息通知</string>
    <string name="newMessageUnalerts">新消息不通知</string>
    <string name="functionBuild">该功能还在完善中…</string>
    <string name="receivedSMS">收到短信</string>
    <string name="smsContent">，我正在使用爱查app辨别商品系统真伪，它是市场上最强的防伪体系，推荐一下，下载页面http://www.iecheck.com/app/d?from=share</string>
    <string name="chazhenwei">查真伪</string>
    <string name="addwebsite">添加网站</string>
    <string name="aibijia">爱比价</string>
    <string name="tianjiahaoyou">请扫描好友爱查二维码</string>
    <string name="china">中国</string>
    <string name="bijia">比价</string>
    <string name="comment">评论</string>
    <string name="slogan">查真假 用爱查</string>
    <string name="nichen">昵称</string>
    <string name="picture">图片</string>
    <string name="querying">正在查询…</string>
    <string name="logining">正在登录…</string>
    <string name="wait">请稍后…</string>
    <string name="checksuccess">验证成功,正在绑定…</string>
    <string name="handling">正在处理…</string>
    <string name="camerabrowse_aty_checking">正在校验…</string>
    <string name="priceimport_aty_uploading">正在提交…</string>
    <string name="search_success">查询成功！</string>
    <string name="token_fail">登录身份过期,请登重新登录</string>
    <string name="share">分享</string>
    <string name="share_content">查真伪，抢红包，马上下载爱查App</string>
    <string name="share_imagelink">http://testpic.iecheck.com/pic/brand/wuliangye/product/logos/iecheck_logo3.png</string>
    <string name="share_website">http://www.iecheck.com/app/d?from=share</string>
    <string name="camerabrowse_aty_selectpic">请选择一张图片</string>
    <string name="msgchat_adt_hasread">已阅读</string>
    <string name="cameraDepot_aty_nostore">暂无外部存储</string>
    <string name="integralreturn_needinputname">请输入正确的姓名</string>
    <string name="integralreturn_needphone">请输入11位有效的手机号码</string>
    <string name="integralreturn_needinputmessage">请将所有信息补充完整</string>
    <string name="integralreturn_toushufail">投诉失败，请重新投诉</string>
    <string name="qrcodee_aty_cannotusecamera">无法连接到相机,请检查是否被占用或限制了爱查的拍照权限。</string>
    <string name="qrcodee_aty_searchfriendfail">搜索好友失败，非好友爱查二维码。</string>
    <string name="qrcodee_aty_codeerro">有误，二维码有污损或数据已过期</string>
    <string name="qrcodee_aty_serverdataerro">哎呀，网络有点着急，请稍后重试...</string>
    <string name="qrcodee_aty_upknowpic">无法识别图片</string>
    <string name="qrcodee_aty_hascooy">已复制到剪贴板</string>
    <string name="qrcodee_aty_picfamaterro">图片格式错误</string>
    <string name="qrcodee_aty_getcodeerro">扫码获取信息失败</string>
    <string name="qrcodee_aty_addfriendfail">添加好友失败</string>
    <string name="aichamabijianodata">不存在此码信息,这是伪造标,无法比价</string>
    <string name="aibijiahistorynodata">该次扫描的码为伪造爱查二维码</string>
    <string name="findloginpwd">找回登录密码</string>
    <string name="pwdLogin">密码登录</string>
    <string name="msmCodeLogin">短信验证登录</string>
    <string name="msmcodecheck">短信验证</string>
    <string name="check">验证</string>
    <string name="checkAndLogin">验证并登录</string>
    <string name="msmcode">短信校验码</string>
    <string name="needcheckphone">需要验证手机号码</string>
    <string name="getmsmcode">获取验证码</string>
    <string name="checkcodefail">验证码错误或过期,请重试</string>
    <string name="hassendcode">已发送验证码,请查收</string>
    <string name="sendto">已向</string>
    <string name="getcodetips">发送短信,请在输入框中填写短信验证码.</string>
    <string name="inputcode">请输入验证码</string>
    <string name="bindbankcardsuccess">绑定银行卡成功</string>
    <string name="regetcode">重新获取</string>
    <string name="miaohouresend">秒后重发</string>
    <string name="loginsuccess">登录成功</string>
    <string name="loginpwd">设置登录密码</string>
    <string name="resetloginpwd">重置登录密码</string>
    <string name="inputloginpwd">输入登录密码</string>
    <string name="inputaccount">请输入手机号/爱查号</string>
    <string name="inputphone">请输入手机号</string>
    <string name="inputrightaccount">请输入正确手机号</string>
    <string name="inputrightphone">请输入正确手机号</string>
    <string name="inputpwd">请输入密码</string>
    <string name="inputcurrentpwd">请输入正确的当前密码</string>
    <string name="inputpwd2">请再次输入密码</string>
    <string name="inputnewpwd">请输入新密码并确认新密码</string>
    <string name="notthesame">两次密码不一致</string>
    <string name="hasregest">您手机号已经注册,请直接登录</string>
    <string name="phoneNOerror">请输入正确的手机号</string>
    <string name="regestbyphone">使用手机号注册</string>
    <string name="changdubuzu">你的输入长度不足8位</string>
    <string name="daancuowu">答案错误,请核对再试</string>
    <string name="logout_ok">注销成功</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="gongnengjieshao">功能介绍</string>
    <string name="jieshaoneirong">\t\t爱查软件是一款供消费者使用的防伪平台客户端软件。它可以通过扫描二维码得知商品真伪信息，可以通过扫描条形码进行比价，可以通过与品牌客服直接联系反馈消费者真正的建议。还可以通过爱查好友体系平台来建立起消费者的小圈子，进行交流。最吸引人的就是扫码后抢到的红包可直接兑换话费或现金。</string>
    <string name="lianxikefu">联系客服</string>
    <string name="qingxiantianxiefankuineirong">请先填写反馈内容</string>
    <string name="checkingVersion">正在检查版本信息</string>
    <string name="nonewversion">当前已经是最新版本</string>
    <string name="msg_type_pic">[图片]</string>
    <string name="msg_type_vedio">[视频]</string>
    <string name="msg_type_voice">[语音]</string>
    <string name="msg_type_location">[位置]</string>
    <string name="msg_type_link">[链接]</string>
    <string name="msg_type_namecard">[名片]</string>
    <string name="msg_type_face">[表情]</string>
    <string name="msg_type_picmsg">[图文消息]</string>
    <string name="msg_type_buylist">[购物记录]</string>
    <string name="msg_type_complaints">[被投诉记录]</string>
    <string name="msg_type_unknown">[未知类型]</string>
    <string name="msg_type_red">[爱查红包]</string>
    <string name="noSupportType">当前版本不支持该消息类型</string>
    <string name="sendmsghint">点击获取按钮，将发送短信验证码到手机号码：</string>
    <string name="hadsendmsghint">已发送短信到该号码，请在输入框中填写短信验证码。</string>
    <string name="no_contactsData">爱查服务器上没有您的手机通讯录信息。</string>
    <string name="resetPswHint">未注册的手机号将默认同意《爱查软件使用协议》并创建为新账号。</string>
    <string name="cuanhuobangding">窜货绑定</string>
    <string name="associatedSuccess">绑定成功</string>
    <string name="associatedSuccessHint">该箱已成功和“#name#”绑定,请继续扫描绑定！</string>
    <string name="associatedErr">绑定失败</string>
    <string name="cuanhuoshujubangding">窜货数据绑定</string>
    <string name="chbd_capture_hint">当前选择的是“#name#”\n将二维码放入框内，即可扫描绑定</string>
    <string name="chbd_capture_hint_noname">将二维码放入框内，即可扫描绑定</string>
    <string name="time_today">今天  </string>
    <string name="time_yesterday">昨天  </string>
    <string name="time_day_beforeyesterday">前天  </string>
    <string name="time_mon">个月前</string>
    <string name="time_year">年前</string>
    <string name="time_day">天前</string>
    <string name="time_hour">小时前</string>
    <string name="time_min">分钟前</string>
    <string name="time_justnow">刚刚</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="updateHintTitle">爱查版本较低</string>
    <string name="updateHint">当前爱查版本较低，无法正常使用扫码功能，请更新软件后使用。</string>
    <string name="update">更新</string>
    <string name="noShoppingRecords">暂无购物记录</string>
    <string name="shoppingRecords">购物记录</string>
    <string name="goodsName">商品名称</string>
    <string name="yuan">元</string>
    <string name="from">来自</string>
    <string name="buyTime">购买时间</string>
    <string name="trueId">真品编号</string>
    <string name="search_goods">搜索商品</string>
    <string name="gouwudaohang">购物导航</string>
    <string name="goumaigoods">购买商品</string>
    <string name="netcomment">网上商城评论</string>
    <string name="peoplecomment">爱查网友评论</string>
    <string name="noNetcomment">没有网上商城评论</string>
    <string name="noPeoplecomment">没有网友评论</string>
    <string name="nomorecomment">没有更多的评论</string>
    <string name="nocommentrecord">目前没有任何评论记录</string>
    <string name="Comment_frg_nothisgoods">此商品品牌暂未加入爱查客服系统</string>
    <string name="netprice">网上商城报价</string>
    <string name="peopleprice">网友报价</string>
    <string name="noNetPrice">没有网上商城报价</string>
    <string name="noPeoplePrice">没有网友报价</string>
    <string name="nomoreprice">没有更多的报价</string>
    <string name="nopricerecord">没有更多相关报价记录</string>
    <string name="History_aty_bijialishi">比价扫描历史</string>
    <string name="History_aty_chazhenwei">真伪查询历史</string>
    <string name="History_aty_nomorehistory">没有更多历史记录</string>
    <string name="History_aty_nohistorycord">没有更多相关历史记录</string>
    <string name="History_aty_noifomation">无法获取扫码信息</string>
    <string name="Historyresult_scanresult">扫描结果</string>
    <string name="scanresult_aty_forge">如果您不知道首次扫描的情况,\n则此防伪标是伪造的,请联系客服</string>
    <string name="withdraw_aty_code">退分验证码</string>
    <string name="upload_commodity_pic">上传商品图片</string>
    <string name="pricedetail_aty_pricedetail">报价详情</string>
    <string name="priceimport_aty_myprice">我的价格</string>
    <string name="priceimport_aty_shen">省</string>
    <string name="priceimport_aty_selectshen">请先选择省份!</string>
    <string name="priceimport_aty_importgoodsname">请输入产品名称!</string>
    <string name="priceimport_aty_importprice">请输入产品价格!</string>
    <string name="priceFormaterror">请输入有效的价格</string>
    <string name="priceimport_aty_importshop">请输入购买商家!</string>
    <string name="priceimport_aty_importarea">请选择地区!</string>
    <string name="priceimport_aty_uploadsuccess">提交成功</string>
    <string name="priceimport_aty_uploadfail">提交失败</string>
    <string name="ganxiefankui">感谢您的反馈!</string>
    <string name="publishcomment_aty_selectpicfail">图片选择失败,请重新选择</string>
    <string name="publishcomment_aty_comment">发表评论</string>
    <string name="publishcomment_aty_commentsuccess">发表成功</string>
    <string name="publishcomment_aty_needselectcomment">请选择评价!</string>
    <string name="publishcomment_aty_needcommentcontent">请输入您的评价内容!</string>
    <string name="publishcomment_aty_picisuploading">图片还在上传，请稍后</string>
    <string name="publishcomment_aty_picisnouploading">请上传商品图片</string>
    <string name="certain">确定</string>
    <string name="text493">发现新的版本</string>
    <string name="text494">新版本，更放心！</string>
    <string name="text495">取消</string>
    <string name="text496">立即更新</string>
</resources>